# TSAE

./: .gitignore  README.md  prepare_hybrid_lm_dataset.sh  pyproject.pascal.toml  pyproject.toml  run_eval_mteb_bert.sh  run_eval_mteb_bert_cls.sh  run_eval_mteb_no_repr.sh  run_eval_mteb_vavae.sh  train_bottleneck.sh  train_bottleneck_a100.sh  train_bottleneck_mpnet.sh  train_bottleneck_no_repr.sh  train_concept_model.sh  train_hybrid_latent.sh  train_hybrid_latent_lm.sh
accel_configs/: bf16.yaml  fp16.yaml  fp32.yaml  fp32_ds_s1.yaml
configs/data/: fineweb_10bt.yaml  wiki_preprocessed.yaml  wiki_sentences.yaml
configs/datasets/: fineweb_10bt.yaml  wikipedia.yaml
configs/eval/: default.yaml  mteb.yaml
configs/experiments/: bottleneck_bert_fineweb_10bt.yaml  bottleneck_mpnet_fineweb_10bt.yaml  bottleneck_mpnet_wikipedia.yaml  bottleneck_no_repr_fineweb_10bt.yaml
configs/model/: bottleneck_bert.yaml  bottleneck_mpnet.yaml  bottleneck_no_repr.yaml  bottleneck_simcse.yaml  rae_simcse.yaml
configs/preprocess/: cm_fineweb_preprocess.yaml  cm_fineweb_small_preprocess.yaml  fineweb_10bt_ml_128.yaml  fineweb_10bt_ml_16.yaml  fineweb_10bt_ml_64.yaml  fineweb_10bt_preprocess.yaml  hybrid_wiki_k8.yaml  wikipedia_preprocess.yaml
configs/train/: ae-mpnet_fineweb_noise-2.yaml  ae_bert_fineweb.yaml  ae_mpnet_fineweb.yaml  ae_mpnet_fineweb_compression.yaml  ae_mpnet_fineweb_nl_2_std_0.2_sl_10.yaml  ae_mpnet_fineweb_noise.yaml  ae_mpnet_fineweb_sem_loss.yaml  ae_mpnet_wikipedia.yaml  ae_no_repr_fineweb.yaml  all-at-once.yaml  bottleneck_ae.yaml  bottleneck_ae_no_repr.yaml  bottleneck_autoencoder.yaml  cm_fineweb.yaml  hybrid_gsm8k.yaml  hybrid_wikipedia_k4.yaml  hybrid_wikipedia_k8.yaml  parallel.yaml  rae_style_autoencoder.yaml  stage1_autoencoder.yaml
envs/: conda-pascal.yaml
scripts/: eval_mteb.py  eval_mteb_nli_bert_cls.py  evaluate_rae_style.py  evaluate_stage1.py  prepare_cm_dataset.py  prepare_dataset.py  prepare_hybrid_lm_dataset.py  prepare_hybrid_lm_dataset_mp.py  push_to_hub.py  token_count_in_mteb.py  train_bottleneck.py  train_bottleneck_no_repr.py  train_concept_model.py  train_hybrid_latent_model.py  train_rae_style.py  train_stage1.py
src/backbones/: base_repr.py  repr_embedder.py  simcse_repr.py
src/data/: collators.py  concept_collators.py  concept_datasets.py  datasets.py  hybrid_latent_collators.py  hybrid_latent_datasets.py  hybrid_lm_sample_build.py
src/eval/: evaluation.py  hybrid_latent_metrics.py  reconstruction_metrics.py  semantic_metrics.py
src/losses/: reconstruction.py  semantic.py
src/models/: bottleneck_ae.py  bottleneck_encoder.py  concept_model.py  decoder.py  detail_encoder.py  encoder.py  hybrid_latent_model.py  latent_augmentation.py  rae_text.py
src/trainers/: __init__.py  bottleneck_trainer.py  concept_trainer.py  rae_trainer.py  (+1 more)
tests/: test_best_checkpoint.py  test_bottleneck.py  test_shapes.py  test_train_step.py  test_training_steps.py
(+3 files in other folders)
