[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tsae"
version = "0.1.0"
description = "Text Semantic AutoEncoder – a 2-stage generative latent framework for text"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "torch>=2.1",
    "transformers>=4.36",
    "datasets>=2.16",
    "sentence-transformers>=2.3",
    "pyyaml>=6.0",
    "dacite>=1.8",
    "editdistance>=0.6",
    "evaluate>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
