# TSAE – default env: A100 / Ampere and newer GPUs (bf16, TF32, recent CUDA).
# For 1080 Ti (Pascal): see README.md Installation section.

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tsae"
version = "0.1.0"
description = "Text Semantic AutoEncoder – a 2-stage generative latent framework for text"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "torch>=2.1",
    "transformers>=4.36",
    "datasets>=2.16",
    "peft",
    "accelerate",
    "deepspeed",
    "sentence-transformers>=2.3",
    "pyyaml>=6.0",
    "dacite>=1.8",
    "editdistance>=0.6",
    "evaluate>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
