# TSAE – environment for Pascal GPUs (e.g. GTX 1080 Ti).
# Recommended: create conda env from envs/conda-pascal.yaml (provides PyTorch + CUDA toolkit so
# CUDA_HOME is set for DeepSpeed), then: cp pyproject.pascal.toml pyproject.toml && pip install -e .
#
# On Pascal: use fp16: true, bf16: false in train configs (no native bf16).
# Avoid torch.compile(); use stock Trainer.

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tsae"
version = "0.1.0"
description = "Text Semantic AutoEncoder – a 2-stage generative latent framework for text"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

# Runtime deps are provided by envs/conda-pascal.yaml. Use that env, then: pip install -e .
dependencies = [
    "torch-ema>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
